add custom styles

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,7 +43,7 @@ layout: base
         {{ content }}
       </article>
 
-      <p class="box-warning">
+      <p class="box-warning ask-to-improve-grammer">
         {% assign create_at = page.date | date: "%Y-%m-%d" %}
         <a href="https://github.com/chebaby/blog/blob/master/_posts/{{ create_at }}-{{ page.slug }}.md">
           <strong>Help us improve this page!</strong>
