--- a/assets/css/custom-styles.css
+++ b/assets/css/custom-styles.css
@@ -1,6 +1,15 @@
+body {
+  font-family: 'Segoe UI', 'Lora', 'Times New Roman', serif;
+}
+
 h2 {
     margin-top: 4rem;
     margin-bottom: 2rem;
+}
+
+h3 {
+    margin-top: 2.5rem;
+    margin-bottom: 1.5rem;
 }
 
 h4 {
