[wip] Article structured data

--- a/_includes/article_structured_data.html
+++ b/_includes/article_structured_data.html
@@ -19,140 +19,4 @@
 	{%- endif -%}
 {% endcapture %}
 
-<script type="application/ld+json">
-{
-	"@context":"https://schema.org",
-	"@graph":[
-		{
-			"@type":"Organization",
-			"@id":"https://echebaby.com/#organization",
-			"name":"echebaby",
-			"url":"https://echebaby.com/",
-			"sameAs":[
-				"https://github.com/chebaby",
-				"https://twitter.com/__chebaby",
-				"https://linkedin.com/in/chebaby",
-				"https://stackoverflow.com/users/4325011/chebaby"
-     		],
-			"logo":{
-				"@type":"ImageObject",
-				"@id":"https://echebaby.com/#logo",
-				"inLanguage":"en-US",
-				"url":"https://echebaby.com/src/assets/images/about/nour-eddine-ech-chebaby.png",
-				"width":500,
-				"height":500,
-				"caption":"Nour-Eddine ECH-CHEBABY"
-			},
-			"image":{
-				"@id":"https://echebaby.com/#logo"
-			},
-			"founder":{
-				"@type":"Person",
-				"name":"Nour-Eddine ECH-CHEBABY",
-				"url":"https://echebaby.com/",
-				"sameAs":"https://echebaby.com/"
-			},
-			"foundingDate":"2017-11-26",
-			"numberOfEmployees":1,
-			"slogan":"Senior Backend Developer",
-			"description":"A highly experienced and creative Web Developer with five years experience. During his professional journey as Web Developer, he worked on variety of exciting projects. Technically competent and industry aware means that each project is undertaken with the most up-to-date and relevant programming foundations available.",
-			"legalName":"echebaby"
-      	},
-		{
-			"@type":"WebSite",
-			"@id":"https://echebaby.com/#website",
-			"url":"https://echebaby.com/",
-			"name":"echebaby",
-			"description":"Senior Backend Developer",
-			"publisher":{
-				"@id":"https://echebaby.com/#organization"
-			},
-			"inLanguage":"en-US",
-			"copyrightHolder":{
-				"@id":"https://echebaby.com/#organization"
-			}
-		},
-		{
-			"@type":"ImageObject",
-			"@id":"{{ page.url | absolute_url }}#primaryimage",
-			"inLanguage":"en-US",
-			"url":"https://echebaby.com/src/assets/images/about/nour-eddine-ech-chebaby.png",
-			"width":500,
-			"height":500,
-			"caption":"{{ title }}"
-		},
-		{
-			"@type":"WebPage",
-			"@id":"{{ page.url | absolute_url }}#webpage",
-			"url":"{{ page.url | absolute_url }}",
-			"name":"{{ title }}",
-			"isPartOf":{
-				"@id":"https://echebaby.com/#website"
-			},
-			"primaryImageOfPage":{
-				"@id":"{{ page.url | absolute_url }}#primaryimage"
-			},
-			"datePublished":"2020-06-02T13:00:01+00:00",
-			"dateModified":"2021-02-12T14:03:24+00:00",
-			"description":"This is the ONLY tutorial you'll need to hugely increase your search engine traffic by improving your WordPress SEO. Want higher rankings? Read on!",
-			"inLanguage":"en-US",
-			"potentialAction":[{
-				"@type":"ReadAction",
-				"target":[
-					"{{ page.url | absolute_url }}"
-				]
-			}]
-		},
-		{
-			"@type":[
-				"Article",
-				"NewsArticle"
-			],
-			"@id":"{{ page.url | absolute_url }}#article",
-			"isPartOf":{
-				"@id":"{{ page.url | absolute_url }}#webpage"
-			},
-			"author":{
-				"@id":"https://echebaby.com/#person"
-			},
-			"headline":"{{ title }}",
-			"datePublished":"2020-06-02T13:00:01+00:00",
-			"dateModified":"2021-02-12T14:03:24+00:00",
-			"mainEntityOfPage":{
-				"@id":"{{ page.url | absolute_url }}#webpage"
-			},
-			"publisher":{
-				"@id":"https://echebaby.com/#organization"
-			},
-			"image":{
-				"@id":"{{ page.url | absolute_url }}#primaryimage"
-			},
-			"keywords":"Content SEO,Google Analytics,Mobile SEO,Security,Site Speed,Site Structure,Technical SEO,WordPress,Yoast SEO",
-			"inLanguage":"en-US",
-			"copyrightYear":"2020",
-			"copyrightHolder":{
-				"@id":"https://echebaby.com/#organization"
-			}
-		},
-		{
-			"@type":"Person",
-			"@id":"https://echebaby.com/#person",
-			"name":"Nour-Eddine ECH-CHEBABY",
-			"image":{
-				"@type":"ImageObject",
-				"@id":"https://echebaby.com/#personlogo",
-				"inLanguage":"en-US",
-				"url":"https://echebaby.com/src/assets/images/about/nour-eddine-ech-chebaby.png",
-				"caption":"Nour-Eddine ECH-CHEBABY"
-			},
-			"description":"A highly experienced and creative Web Developer with five years experience. During his professional journey as Web Developer, he worked on variety of exciting projects. Technically competent and industry aware means that each project is undertaken with the most up-to-date and relevant programming foundations available.",
-			"sameAs":[
-				"https://github.com/chebaby",
-				"https://twitter.com/__chebaby",
-				"https://linkedin.com/in/chebaby",
-				"https://stackoverflow.com/users/4325011/chebaby"
-			]
-		}
-   ]
-}
-</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@graph":[{"@type":"Organization","@id":"https://echebaby.com/#organization","name":"echebaby","url":"https://echebaby.com/","sameAs":["https://github.com/chebaby","https://twitter.com/__chebaby","https://linkedin.com/in/chebaby","https://stackoverflow.com/users/4325011/chebaby"],"logo":{"@type":"ImageObject","@id":"https://echebaby.com/#logo","inLanguage":"en-US","url":"https://echebaby.com/src/assets/images/about/nour-eddine-ech-chebaby.png","width":500,"height":500,"caption":"Nour-Eddine ECH-CHEBABY"},"image":{"@id":"https://echebaby.com/#logo"},"founder":{"@type":"Person","name":"Nour-Eddine ECH-CHEBABY","url":"https://echebaby.com/","sameAs":"https://echebaby.com/"},"foundingDate":"2017-11-26","numberOfEmployees":1,"slogan":"Senior Backend Developer","description":"A highly experienced and creative Web Developer with five years experience. During his professional journey as Web Developer, he worked on variety of exciting projects. Technically competent and industry aware means that each project is undertaken with the most up-to-date and relevant programming foundations available.","legalName":"echebaby"},{"@type":"WebSite","@id":"https://echebaby.com/#website","url":"https://echebaby.com/","name":"echebaby","description":"Senior Backend Developer","publisher":{"@id":"https://echebaby.com/#organization"},"inLanguage":"en-US","copyrightHolder":{"@id":"https://echebaby.com/#organization"}},{"@type":"ImageObject","@id":"{{ page.url | absolute_url }}#primaryimage","inLanguage":"en-US","url":"https://echebaby.com/src/assets/images/about/nour-eddine-ech-chebaby.png","width":500,"height":500,"caption":"{{ title }}"},{"@type":"WebPage","@id":"{{ page.url | absolute_url }}#webpage","url":"{{ page.url | absolute_url }}","name":"{{ title }}","isPartOf":{"@id":"https://echebaby.com/#website"},"primaryImageOfPage":{"@id":"{{ page.url | absolute_url }}#primaryimage"},"datePublished":"2020-06-02T13:00:01+00:00","dateModified":"2021-02-12T14:03:24+00:00","description":"{{ description }}","inLanguage":"en-US","potentialAction":[{"@type":"ReadAction","target":["{{ page.url | absolute_url }}"]}]},{"@type":["Article","NewsArticle"],"@id":"{{ page.url | absolute_url }}#article","isPartOf":{"@id":"{{ page.url | absolute_url }}#webpage"},"author":{"@id":"https://echebaby.com/#person"},"headline":"{{ title }}","datePublished":"{{ page.date | date_to_xmlschema }}","dateModified":"{{ page.date | date_to_xmlschema }}","mainEntityOfPage":{"@id":"{{ page.url | absolute_url }}#webpage"},"publisher":{"@id":"https://echebaby.com/#organization"},"image":{"@id":"{{ page.url | absolute_url }}#primaryimage"},"keywords":"{{ page.tags | array_to_sentence_string: ',' }}","inLanguage":"en-US","copyrightYear":"{{ site.time | date: '%Y' }}","copyrightHolder":{"@id":"https://echebaby.com/#organization"}},{"@type":"Person","@id":"https://echebaby.com/#person","name":"Nour-Eddine ECH-CHEBABY","image":{"@type":"ImageObject","@id":"https://echebaby.com/#personlogo","inLanguage":"en-US","url":"https://echebaby.com/src/assets/images/about/nour-eddine-ech-chebaby.png","caption":"Nour-Eddine ECH-CHEBABY"},"description":"A highly experienced and creative Web Developer with five years experience. During his professional journey as Web Developer, he worked on variety of exciting projects. Technically competent and industry aware means that each project is undertaken with the most up-to-date and relevant programming foundations available.","sameAs":["https://github.com/chebaby","https://twitter.com/__chebaby","https://linkedin.com/in/chebaby","https://stackoverflow.com/users/4325011/chebaby"]}]}</script>
